# threefirestone-cost-intelligence

./: .gitignore  ARCHITECTURE.md  LLM_Kernel_Deep_Dive.md  README.md  docker-compose.yml  inspect_pgvector.py  llm_generation_from_scratch.py  package-lock.json  package.json  pyproject.toml  rag_chat.py  requirements.txt  tailwind.config.ts  test_agentic.py  test_deepseek.py  test_financials.py  test_yasha.py
config/: .env.example  config.yaml  loader.py  settings.py
data/eval/: golden_test_set.json
data/knowledge_base/: 智能体问答.md
docs/: architecture.md  architecture.mmd
infrastructure/: docker-compose.langfuse.yml  docker-compose.yml  promptfooconfig.yaml
infrastructure/docker/: Dockerfile.postgres
ocr_tools/: README.md  __init__.py  batch_scan.py  generate_report.py  merge_results.py  process_large_files.py  process_medium_files.py  process_small_files.py  validate_results.py
ocr_web_service/: README.md  index.html  ocr_api_service.py
references/rag-fullstack/: .env.example  RAG_Implementation_Guide.md  README.md  app.py  check_db_content.py  create_db.py  start.sh  test_comparison.py
references/rag-knowledge-base/: README.md  tailwind.config.ts
scripts/: check-governance.py  test_integration.py
scripts/ocr/: batch_ocr_pipeline.py  run_all_ocr.py
scripts/setup/: download_models.py
tests/: mock-backend-services.py  mock-websocket-gateway.js  test_agent_16.py  test_backfill_embeddings.py  test_chart_page_backfill.py  test_fee_rate_import.py  test_ocr_improvements.py  websocket-test.js
tools/: _check2.py  _check_ganggong.py  _patch_fee_rates_ganggong.py  _patch_ingest.py  diagnose_rag.py  embed_and_sync_qdrant.py  ingest_qa_excel.py  ocr_2026_01_pipeline.py  ocr_ingest_pipeline.py  rechunk_semantic.py  run_ingest.py  run_ocr_pipeline.py
(+470 files in other folders)
