[project]
name = "rag-retrieval"
version = "0.1.0"
description = "召回精排架构 - 四库联动RAG系统"
requires-python = ">=3.10"

dependencies = [
    # Web 层
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    
    # 验证与配置
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "annotated-types>=0.6.0",
    
    # 数据与ORM
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    
    # 向量与AI
    "qdrant-client>=1.7.0",
    "elasticsearch>=8.11.0",
    "neo4j>=5.14.0",
    "sentence-transformers>=2.5.0",
    "transformers>=4.38.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    
    # 外部通信
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    "aiohttp>=3.9.0",
    
    # 领域层与DI
    "dependency-injector>=4.41.0",
    "returns>=0.22.0",
    
    # 可观测性
    "structlog>=24.1.0",
    "opentelemetry-api>=1.22.0",
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.40.0",
    
    # 工具
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "pydantic-yaml>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "polyfactory>=2.14.0",
    "testcontainers>=3.7.0",
    "respx>=0.20.0",
    "schemathesis>=3.24.0",
    "hypothesis>=6.98.0",
    "datamodel-code-generator>=0.25.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
